# medic-rag

./: README.md  pyproject.toml
medic_rag/: app.py
